hw2/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myshop
  labels:
    app: myshop
spec:
  containers:
  - name: myshop
    image: bael/ms-course-hw1:v1
    ports:
      - name: liveness-port
        containerPort: 8000
    livenessProbe:
      httpGet:
        path: /health
        port: liveness-port
      failureThreshold: 1
      periodSeconds: 10
    readinessProbe:
      httpGet:
        port: liveness-port
        path: /health
      initialDelaySeconds: 10
      periodSeconds: 5
    startupProbe:
      httpGet:
        path: /health
        port: liveness-port
      failureThreshold: 30
      periodSeconds: 5
